Remove commons-io dependency
Requires at least Java 9, so upgrading to Java 11.